[package]
name = "blend"
version = "0.6.1"
authors = ["Lucas Bittencourt <lbittencs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A parser and runtime for Blender's .blend files."
homepage = "https://github.com/lukebitts/blend"
documentation = "https://docs.rs/blend/"
repository = "https://github.com/lukebitts/blend"
categories = ["parser-implementations"]
keywords = ["blend", "blender"]
readme = "README.md"

[dependencies]
nom = "7.1.3"
linked-hash-map = "0.5.2"

[dev-dependencies]
libflate = "0.1"