[package]
name = "blend"
version = "0.1.0"
authors = ["Lucas <lbittencs@gmail.com>"]

[[bin]]
name="bin"
path="src/lib.rs"

[dependencies]
blend_parse = { path="../blend_parse" }
blend_sdna = { path="../blend_sdna" }
lazy_static = "1.0"
fancy-regex = "0.1"
num = "0.2.0"
byteorder = "1.2"
derivative = "1.0.1"
nom = "4.1"